Added index and messageView.

--- a/classwork/backbone-view/index.html
+++ b/classwork/backbone-view/index.html
@@ -55,6 +55,7 @@
 					<dd><%= message %></dd>
 				</dl>
 			</div>
+			<span class="time"></span>
 	</script>
 
 	<!-- These are my library files -->
